--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/icon/icon.png" type="image/x-icon">
     <script src="signup.js"></script>
     <link rel="apple-touch-icon" href="./assets/icon/icon.png">
@@ -21,14 +21,19 @@
                 align-items: center;
                 justify-content: center;
                 height: 100vh; ">
-        <form enctype="multipart/form-data" name="registrationForm" id="registrationForm" action="signup.php" method="post">
+        <form enctype="multipart/form-data" name="registrationForm" id="registrationForm" action="signup.php" method="post" style="background-color: rgba(97, 226, 252, 0.5);
+                                                                                                                                    padding: 20px;
+                                                                                                                                    border-radius: 10px;
+                                                                                                                                    max-width: 300px;
+                                                                                                                                    margin: 0 auto;
+                                                                                                                                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);">
             <div id="tobehidden">
                 <div>
                     <label for="email" style="margin-right: 25px;">Email:</label>
                     <input required style="padding: 10px;
                                     border: 0px solid lightblue;
                                     margin-bottom: 10px;
-                                    background-color: rgba(6, 213, 250, 0.187);
+                                    background-color: white;
                                     border-radius: 5px;" name="email" id="email" type="email">
                 </div>
                 <div>
@@ -36,7 +41,7 @@
                     <input  required style="padding: 10px;
                                     border: 0px solid lightblue;
                                     margin-bottom: 10px;
-                                    background-color: rgba(6, 213, 250, 0.187);
+                                    background-color: white;
                                     border-radius: 5px;" name="name" id="name" type="text">
                 </div>
                 <div>
@@ -44,7 +49,7 @@
                     <input required style="padding: 10px;
                     margin-bottom: 10px;
                     border: 0px solid lightblue;
-                    background-color: rgba(6, 213, 250, 0.187);;
+                    background-color: white;
                     border-radius: 5px;" name="password" id="password" type="password">
                 </div>
                 <div>
@@ -52,7 +57,7 @@
                     <input required style="padding: 10px;
                     margin-bottom: 10px;
                     border: 0px solid lightblue;
-                    background-color: rgba(6, 213, 250, 0.187);
+                    background-color: white;
                     border-radius: 5px;" name="tel" id="tel" type="text">
                 </div>
                 <div>
@@ -62,13 +67,26 @@
                     <label for="passenger" name="passenger">Passenger</label>
                     <input name="type" id="passenger" type="radio" value="passenger" checked>
                 </div>
+                <div style="margin-top: 10px;">
+                    <button type="button" id="next-btn" onclick="continueSignUp()" style="width: 100%;
+                    padding: 10px;
+                    background-color: #007BFF;
+                    color: #fff;
+                    border: none;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    margin-bottom: 10px;">Next</button>
+                </div>
                 <div>
-                    <button type="button" id="next-btn" onclick="continueSignUp()" style="padding: 10px;
-                                                background-color: rgba(0, 0, 0, 0);
-                                                color: lightblue;
-                                                border: 1;
-                                                cursor: pointer;
-                                                border-radius: 5px;">Next</button>
+                    <a href="index.html">
+                        <button type="button" id="next-btn" style="width: 100%;
+                        padding: 10px;
+                        background-color: #007BFF;
+                        color: #fff;
+                        border: none;
+                        border-radius: 5px;
+                        cursor: pointer;">Login</button>
+                    </a>
                 </div>
             </div>
             <div id="passengerform" style="display: none;">
@@ -77,7 +95,7 @@
                     <input style="padding: 10px;
                                     border: 0px solid lightblue;
                                     margin-bottom: 10px;
-                                    background-color: rgba(6, 213, 250, 0.187);
+                                    background-color: white;
                                     border-radius: 5px;" name="photo" id="photo" type="file" accept=".jpeg,.jpg,.png">
                 </div>
                 <div >
@@ -85,7 +103,7 @@
                     <input style="padding: 10px;
                                     border: 0px solid lightblue;
                                     margin-bottom: 10px;
-                                    background-color: rgba(6, 213, 250, 0.187);
+                                    background-color: white;
                                     border-radius: 5px;" name="passport" id="passportImg" type="file" accept=".jpeg,.jpg,.png">
                 </div>
             </div>
@@ -95,7 +113,7 @@
                     <textarea style="padding: 10px;
                     margin-bottom: 10px;
                     border: 0px solid lightblue;
-                    background-color: rgba(6, 213, 250, 0.187);
+                    background-color: white;
                     border-radius: 5px;" name="bio" id="bio" cols="30" rows="10"></textarea>
                 </div>
                 <div>
@@ -103,7 +121,7 @@
                     <input style="padding: 10px;
                     margin-bottom: 10px;
                     border: 0px solid lightblue;
-                    background-color: rgba(6, 213, 250, 0.187);
+                    background-color: white;
                     border-radius: 5px;" name="address" id="address" type="text">
                 </div>
                 <div>
@@ -111,7 +129,7 @@
                     <input style="padding: 10px;
                     margin-bottom: 10px;
                     border: 0px solid lightblue;
-                    background-color: rgba(6, 213, 250, 0.187);
+                    background-color: white;
                     border-radius: 5px;" name="location" id="loc" type="text">
                 </div>
                 <div>
@@ -119,7 +137,7 @@
                     <input style="padding: 10px;
                     margin-bottom: 10px;
                     border: 0px solid lightblue;
-                    background-color: rgba(6, 213, 250, 0.187);
+                    background-color: white;
                     border-radius: 5px;" name="username" id="username" type="text">
                 </div>
                 <div>
@@ -127,23 +145,25 @@
                     <input style="padding: 10px;
                                     border: 0px solid lightblue;
                                     margin-bottom: 10px;
-                                    background-color: rgba(6, 213, 250, 0.187);
+                                    background-color: white;
                                     border-radius: 5px;" name="logo" id="logo" type="file" accept=".jpeg,.jpg,.png">
                 </div>
             </div>
             <div id="submit-btn" style="display: none;">
-                <input type="submit" style="padding: 10px;
-                                            background-color: rgba(0, 0, 0, 0);
-                                            color: lightblue;
-                                            border: 1;
-                                            cursor: pointer;
-                                            border-radius: 5px; margin-right: 250px;" value="Sign Up">
-                <button type="button" onclick="back()" style="padding: 10px;
-                                                                background-color: rgba(0, 0, 0, 0);
-                                                                color: lightblue;
-                                                                border: 1;
-                                                                cursor: pointer;
-                                                                border-radius: 5px;">Back</button>
+                <input type="submit" style="width: 100%;
+                padding: 10px;
+                background-color: #007BFF;
+                color: #fff;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;" value="Sign Up">
+                <button type="button" onclick="back()" style="width: 100%;
+                padding: 10px;
+                background-color: #007BFF;
+                color: #fff;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;">Back</button>
             </div>
         </form>
     </div>
