--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/icon/icon.png" type="image/x-icon">
-    <link rel="apple-touch-icon" href="./assets/icon/icon.png">
-    <title>Fly Emirates</title>
+    <title>Flight Booker</title>
     <style>
         body {
-            background-image: url('./assets/images/backgroundimg/background.jpeg');
+            background-image: url('./assets/images/backgroundimg/wallpaper.jpg');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
@@ -66,8 +64,8 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Login to Fly Emirates</h2>
-        <form class="login-form" action="login.php" method="post">
+        <h2>Login to Flight Booker</h2>
+        <form class="login-form" action="./login.php" method="post">
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
